--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
         <nav class="header-nav">
           <ul class="nav list">
             <li class="item"><a class="site-nav link" href="./index.html">Студія</a></li>
-            <li class="item"><a class="site-nav link current" href="./portfolio.html">Портфоліо</a></li>
+            <li class="item"><a class="site-nav link current underline" href="./portfolio.html">Портфоліо</a></li>
             <li class="item"><a class="site-nav link" href="#">Контакти</a></li>
           </ul>
         </nav>
